# suns-cmd

./: Bench.hs  Common.hs  Executable.hs  Main.hs  README.md  Test.hs  suns-cmd.cabal  suns-cmd.hs
test/: test.hs
test/figure2/: Figure2.pse
test/figure3and4B/: Figure3and4B.pse
test/figure4A/: Figure4A.pse
