Name: suns-cmd
Version: 1.0.0
Cabal-Version: >= 1.14.0
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2013 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/suns-cmd/issues
Synopsis: Command line client to the Suns protein search engine
Description: This package provides a simple command line client that you can
  use to automate searches to a Suns search engine.  Installing this package
  creates a @suns-cmd@ executable in cabal's executable directory (typically
  @~/.cabal/bin/@).  This program provides the following help text:
 .
 > suns-cmd: The Suns search command line client
 > 
 > Usage: suns-cmd [--hostname STRING] [-r|--rmsd DOUBLE] [-n|--num INT] [-s|--seed INT] [-d|--directory FILEPATH]
 >   Send search requests and store results as PDB files
 > 
 > Available options:
 >   -h,--help                Show this help text
 >   --hostname STRING        Search engine address (default: suns.degradolab.org)
 >   -r,--rmsd DOUBLE         RMSD cutoff (default: 1.0)
 >   -n,--num INT             Number of results (default: 100)
 >   -s,--seed INT            Randomization seed (default: 0)
 >   -d,--directory FILEPATH  Results directory (default: ./)
 > 
 > Report bugs to suns-search@googlegroups.com
Category: Network, Science, Command Line
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/suns-cmd

Executable suns-cmd
    Main-Is: Executable.hs
    Default-Language: Haskell2010
    Build-Depends:
        base                 >= 4        && < 5   ,
        aeson                               < 0.7 ,
        amqp                 >= 0.8      && < 0.9 ,
        async                >= 2.0.0.0  && < 2.1 ,
        bytestring           >= 0.9.2.1  && < 0.11,
        containers           >= 0.4.2.1  && < 0.6 ,
        errors               >= 1.4.2    && < 1.5 ,
        free                                      ,
        network              >= 2.3.0.13 && < 2.5 ,
        optparse-applicative >= 0.5.2.1  && < 0.6 ,
        pipes                >= 4.0.0    && < 4.2 ,
        pipes-concurrency    >= 2.0.0    && < 2.1 ,
        pipes-group          >= 1.0.0    && < 1.1 ,
        system-fileio        >= 0.2.1    && < 0.4 ,
        system-filepath      >= 0.3.1    && < 0.5 ,
        text                                < 0.12,
        uuid                 >= 1.2.6    && < 1.3
    GHC-Options: -O2 -Wall
    Default-Language: Haskell2010

Test-Suite test
    Type: exitcode-stdio-1.0
    Main-Is: Test.hs
    Build-Depends:
        base                 >= 4        && < 5   ,
        aeson                               < 0.7 ,
        amqp                 >= 0.8      && < 0.9 ,
        async                >= 2.0.0.0  && < 2.1 ,
        bytestring           >= 0.9.2.1  && < 0.11,
        cereal                              < 0.4 ,
        containers           >= 0.4.2.1  && < 0.6 ,
        crypto-api           >= 0.0.0.2  && < 0.14,
        errors               >= 1.4.2    && < 1.5 ,
        network              >= 2.3.0.13 && < 2.5 ,
        pipes                >= 4.0.0    && < 4.2 ,
        pipes-bytestring     >= 2.0.0    && < 2.1 ,
        pipes-group          >= 1.0.0    && < 1.1 ,
        pipes-parse          >= 3.0.1    && < 3.1 ,
        pipes-concurrency    >= 2.0.0    && < 2.1 ,
        pureMD5              >= 2.1.0.0  && < 2.2 ,
        system-fileio        >= 0.2.1    && < 0.4 ,
        tagged                              < 0.8 ,
        text                                < 0.12,
        uuid                 >= 1.2.6    && < 1.3
    GHC-Options: -O2 -Wall
    Default-Language: Haskell2010

Benchmark bench
    Type: exitcode-stdio-1.0
    Main-Is: Bench.hs
    Build-Depends:
        base                 >= 4        && < 5   ,
        aeson                               < 0.7 ,
        amqp                 >= 0.8      && < 0.9 ,
        async                >= 2.0.0.0  && < 2.1 ,
        bytestring           >= 0.9.2.1  && < 0.11,
        containers           >= 0.4.2.1  && < 0.6 ,
        errors               >= 1.4.2    && < 1.5 ,
        free                 >= 4.7      && < 5   ,
        network              >= 2.3.0.13 && < 2.5 ,
        optparse-applicative >= 0.5.2.1  && < 0.6 ,
        pipes                >= 4.0.0    && < 4.2 ,
        pipes-concurrency    >= 2.0.0    && < 2.1 ,
        pipes-group          >= 1.0.0    && < 1.1 ,
        system-fileio        >= 0.2.1    && < 0.4 ,
        system-filepath      >= 0.3.1    && < 0.5 ,
        text                                < 0.12,
        time                 >= 1.4      && < 1.5 ,
        uuid                 >= 1.2.6    && < 1.3
    Ghc-Options: -O2 -Wall
    Default-Language: Haskell2010
